# kafka-practice

./: .env.default  Dockerfile  README.md  consumer.py  docker-compose.yaml  producer.py  pyproject.toml
